<?xml version="1.0" encoding="utf-8"?>
<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">FHIR_Medication</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="profile">Profile</string>
    <string name="medication">Medication</string>
    <string name="please_grant_location_permission">Please grant location permission!</string>
    <string name="log_out">Log out</string>
    <string name="statistics">Statistics</string>
    <string name="changePassword">Change password</string>
    <string name="newPassword">New password:</string>
    <string name="typeOldPassword">Old password here...</string>
    <string name="typeNewPassword">New password here...</string>
    <string name="typeNewPasswordAgain">New password here again...</string>
    <string name="newPasswordAgain">New password again:</string>
    <string name="information">Information</string>
    <string name="oldPassword">Old password:</string>
    <string name="delete">Delete</string>
    <string name="edit">Edit</string>
    <string name="identifier1">Identifier 1</string>
    <string name="identifier2">Identifier 2</string>
    <string name="code">Code</string>
    <string name="status">Status</string>
    <string name="manufacturer">Manufacturer</string>
    <string name="form">Form</string>
    <string name="amount">Amount</string>
    <string name="batch1_lotNumber">Batch 1 - Lot Number</string>
    <string name="batch1_expirationDate">Batch 1 - Expiration Date</string>
    <string name="batch2_lotNumber">Batch 2 - Lot Number</string>
    <string name="batch2_expirationDate">Batch 2 - Expiration Date</string>
    <string name="back">Back</string>
    <string name="add">Add</string>
    <string name="ingredient1_item">Ingredient 1 - Item</string>
    <string name="ingredient1_isActive">Ingredient 1 - Is Active</string>
    <string name="ingredient1_strength">Ingredient 1 - Strength</string>
    <string name="ingredient2_item">Ingredient 2 - Item</string>
    <string name="ingredient2_isActive">Ingredient 2 - Is Active</string>
    <string name="ingredient2_strength">Ingredient 2 - Strength</string>
    <string name="active">Active</string>
    <string name="not_active">Not Active</string>
    <string name="null_">Null</string>
</resources>