<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
        <item
            android:id="@+id/medicationPage"
            android:enabled="true"
            android:icon="@drawable/ic_baseline_local_hospital_24"
            android:title="@string/medication"/>
        <item
            android:id="@+id/vaccines"
            android:enabled="true"
            android:icon="@drawable/ic_baseline_security_24"
            android:title="@string/vaccines"/>
        <item
            android:id="@+id/profilePage"
            android:enabled="true"
            android:icon="@drawable/ic_baseline_person_24"
            android:title="@string/profile"/>
        <item
            android:id="@+id/logOut"
            android:enabled="true"
            android:icon="@drawable/ic_baseline_close_24"
            android:title="@string/log_out"/>
</menu>